force-app/main/default/objects/CSA_Criteria_Evaluation__c/CSA_Criteria_Evaluation__c.object-meta.xml
<CustomObject>
    <label>Criteria Evaluation</label>
    <nameField>
        <label>Criteria Evaluation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criteria Evaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>