force-app/main/default/objects/CSA_Criteria_Evaluation__c/fields/Prioritization__c.field-meta.xml
<CustomField>
    <fullName>Prioritization__c</fullName>
    <label>Prioritization</label>
    <referenceTo>CSA_Prioritization__c</referenceTo>
    <relationshipLabel>Criteria Evaluations</relationshipLabel>
    <relationshipName>Criteria_Evaluations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>