force-app/main/default/objects/CSA_Criteria_Evaluation__c/fields/Selected_option__c.field-meta.xml
<CustomField>
    <fullName>Selected_option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected option</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Criteria__c</field>
            <operation>equals</operation>
            <valueField>CSA_Option__c.Criteria__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CSA_Option__c</referenceTo>
    <relationshipLabel>Criteria Evaluations</relationshipLabel>
    <relationshipName>Criteria_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>