force-app/main/default/objects/CSA_Criteria_Evaluation__c/fields/User_Value__c.field-meta.xml
<CustomField>
    <fullName>User_Value__c</fullName>
    <label>User Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>